--- a/intro.html
+++ b/intro.html
@@ -79,7 +79,7 @@
 				<a class="navbar-brand" href="#top">Lego 가격비교</a>
 			</div>
 			<div id="navbar" class="navbar-collapse collapse" collapse="navbarCollapsed">
-				<ul class="nav navbar-nav">
+				<ul class="nav navbar-nav navbar-right">
 					<li><a href="/">Home</a></li>
 					<li class="active"><a href="intro.html">About</a></li>
 				</ul>
