--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 					<a class="navbar-brand" href="#top">Lego 가격비교</a>
 				</div>
 				<div id="navbar" class="navbar-collapse collapse" collapse="navbarCollapsed">
-          <ul class="nav navbar-nav">
+          <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="/">Home</a></li>
             <li><a href="intro.html">About</a></li>
           </ul>
