--- a/intro.html
+++ b/intro.html
@@ -88,7 +88,7 @@
 	</nav>
     <div class="container">
         <div class="page-header">
-            <h1 id="timeline">Realse note</h1>
+            <h1 id="timeline">Release note</h1>
         </div>
         <ul class="timeline">
             <li class="timeline-inverted">
