--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 				</header>
 				<p>
 					<div class="input-group">
-						<input type="text" class="form-control" placeholder="Lego shop URL ex) http://shop.lego.com/en-DE/B-Wing-75050" aria-describedby="basic-addon2" ng-model="shopUrl">
+						<input type="text" class="form-control" placeholder="item number or Lego shop URL ex1) 75050 ex2) http://shop.lego.com/en-DE/B-Wing-75050" aria-describedby="basic-addon2" ng-model="shopUrl">
 						<span class="input-group-btn">
 							<div ng-activity-indicator="CircledWhite"></div>
 							<button class="btn btn-info" type="button" ng-click="getPrice()">Get Price!</button>
@@ -100,6 +100,9 @@
 					</div>
 				</p>
 				<p class="text-right">
+					search example<br>
+					ex1) 75050 <br>
+					ex2) http://shop.lego.com/en-DE/B-Wing-75050<br>
 					<div class="fb-like" data-href="http://smallmiro.github.io" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
 				</p>
 			</div>
