google 이벤트 추가.

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 				<header class="inner">
 					<h2 id="project_title">레고 공홈 가격비교 <small>Let's search!!</small></h2>
 				</header>
-				<p>
+				<p class="text-center">
 					<div class="input-group">
 						<input type="text" class="form-control" placeholder="item number or Lego shop URL ex1) 75050 ex2) http://shop.lego.com/en-DE/B-Wing-75050" aria-describedby="basic-addon2" ng-model="shopUrl">
 						<span class="input-group-btn">
