--- a/index.html
+++ b/index.html
@@ -98,7 +98,9 @@
 							<button class="btn btn-info" type="button" ng-click="getPrice()" ng-disabled="isLoading">Get Price!</button>
 						</span>
 					</div>
-					<span class="label label-danger" ng-show="isLoading">Loading.....</span>
+					<center>
+						<span class="label label-danger" ng-show="isLoading">Loading.....</span>
+					</center>
 				</p>
 				<p class="text-right">
 					<div class="fb-like" data-href="http://smallmiro.github.io" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
