--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.0.js"></script>
 
 
-		<script src="js/controller/home.js?20150722004"></script>
+		<script src="js/controller/home.js?20150722005"></script>
 		<link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
 		<title>레고 공홈 가격비교</title>
 		<script>
@@ -199,7 +199,7 @@
 					</div>
 					<div class="row" ng-hide="moreList(hardlist)">
 						  <div class="col-sm-12">
-								<button style="width:100%" type="button" class="btn btn-info" ng-click="getHardList()">more</button>
+								<button style="width:100%" type="button" class="btn btn-info" ng-click="getHardList()">{{more}}</button>
 							</div>
 					</div>
 				</section
