--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.0.js"></script>
 
 
-		<script src="js/controller/home.js?20150722006"></script>
+		<script src="js/controller/home.js?20150722007"></script>
 		<link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
 		<title>레고 공홈 가격비교</title>
 		<script>
@@ -192,7 +192,7 @@
 
 					        <h4>{{product.name}}</h4>
 					        <p>카테고리 : {{product.category}}</p>
-					        <p><a href="#top" style="width:100%" class="btn btn-default" role="button" ng-click="viewDetail(product.prodCode)">가격정보</a></p>
+					        <p><a href="#" style="width:100%" class="btn btn-default" role="button" ng-click="viewDetail(product.prodCode)">가격정보</a></p>
 					      </div>
 					    </div>
 					  </div>
