--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="#top">Lego 가격비교</a>
+					<a class="navbar-brand" href="/">Lego 가격비교</a>
 				</div>
 				<div id="navbar" class="navbar-collapse collapse" collapse="navbarCollapsed">
           <ul class="nav navbar-nav navbar-right">
