--- a/index.html
+++ b/index.html
@@ -88,11 +88,8 @@
 		<div class="jumbotron">
 			<div class="container">
 				<header class="inner">
-					<div class="row">
-					  <div class="col-xs-12 col-sm-6 col-md-8"><h2 id="project_title">레고 공홈 가격비교 <small>Let's search!!</small></h2></div>
-					  <div class="col-xs-6 col-md-4"><div class="fb-like" data-href="http://smallmiro.github.io" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div></div>
-					</div>
-
+					<h2 id="project_title">레고 공홈 가격비교 <small>Let's search!!</small></h2>
+					<div class="fb-like" data-href="http://smallmiro.github.io" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
 				</header>
 				<p class="text-center">
 					<div class="input-group">
