--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
 			</div>
 			<!-- FOOTER  -->
-			<footer class="inner">
+			<footer>
 
 		      <div class="well">
 		        <p>전세계 레고 공식 홈페이지의 가격비교, 많이 찾는 상품, 품절 등의 상태를 비교해보세요.</p>
