--- a/intro.html
+++ b/intro.html
@@ -157,9 +157,8 @@
 
 		</div>
 		<!-- FOOTER  -->
-			<footer class="inner">
-
-					<div class="well">
+			<footer>
+					<div class="well text-center">
 						<p>전세계 레고 공식 홈페이지의 가격비교, 많이 찾는 상품, 품절 등의 상태를 비교해보세요.</p>
 					</div>
 			</footer>
