--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 
 
 		<script src="js/controller/home.js?20150723004"></script>
+		<script src="js/angular-socialshare.min.js"></script>
 		<link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
+		<link href="css/angular-socialshare.min.css" rel="stylesheet">
 		<title>레고 공홈 가격비교</title>
 		<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -107,7 +109,7 @@
 					</center>
 				</p>
 				<p class="text-right">
-
+<div facebook data-name='Fb Share' data-url='http://google.com' data-picture-url='http://plnk.co/img/plunker.png' data-caption='Testing Facebook Shae' data-shares='shares'> <a href>Share To facebook<a> <p>Number of Shares: {{shares}}</p> </div>
 				</p>
 			</div>
 		</div>
