--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 							        <h3>{{product.name}}</h3>
 											<p>
 <div facebook data-name='Fb Share' data-url='http://smallmiro.github.io/?prodcode={{product.prodCode}}' data-picture-url='{{product.image}}' data-caption='{{product.name}}' data-shares='shares'>
-<a href>Share To facebook<a>
+<a href>Share To facebook</a>
 <p>Number of Shares: {{shares}}</p>
 </div>
 											</p>
