환율...........크롤링 추

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
 
 		<script src="js/controller/home.js?20150723006"></script>
-		<script src="js/angular-socialshare.min.js"></script>
+		<script src="js/angular-socialshare.min.js?20150723006"></script>
 		<link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
-		<link href="css/angular-socialshare.min.css" rel="stylesheet">
+		<link href="css/angular-socialshare.min.css?20150723006" rel="stylesheet">
 		<title>레고 공홈 가격비교</title>
 		<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
