--- a/index.html
+++ b/index.html
@@ -42,7 +42,23 @@
 
 	</head>
 	<body ng-controller="legoController" data-ng-init="getHardList()"  style="padding-top: 50px;padding-bottom: 20px;">
+	<script>
+	  window.fbAsyncInit = function() {
+	    FB.init({
+	      appId      : '401739753336740',
+	      xfbml      : true,
+	      version    : 'v2.4'
+	    });
+	  };
 
+	  (function(d, s, id){
+	     var js, fjs = d.getElementsByTagName(s)[0];
+	     if (d.getElementById(id)) {return;}
+	     js = d.createElement(s); js.id = id;
+	     js.src = "//connect.facebook.net/en_US/sdk.js";
+	     fjs.parentNode.insertBefore(js, fjs);
+	   }(document, 'script', 'facebook-jssdk'));
+	</script>
 	<div id="fb-root"></div>
 	<script>(function(d, s, id) {
 	  var js, fjs = d.getElementsByTagName(s)[0];
