--- a/index.html
+++ b/index.html
@@ -130,10 +130,7 @@
 							      <div class="caption">
 							        <h3>{{product.name}}</h3>
 											<p>
-<div facebook data-name='Fb Share' data-url='http://smallmiro.github.io/?prodcode={{product.prodCode}}' data-picture-url='{{product.image}}' data-caption='{{product.name}}' data-shares='shares'>
-<a href>Share To facebook</a>
-<p>Number of Shares: {{shares}}</p>
-</div>
+<div facebook class="facebookShare" data-title='{{product.name}}' data-picture-url='{{product.image}}' data-url='http://smallmiro.github.io/?prodcode={{product.prodCode}}' data-shares='shares'>{{ shares }}</div>
 											</p>
 							        <p>상품 이미지의 저작권은 shop.lego.com이 가지고 있습니다.</p>
 							      </div>
