--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta property="fb:app_id" content="401739753336740" />
 		<meta property="og:type" content="website" />
 		<meta property="og:title" content="레고 공홈 가격비교" />
-		<!--meta property="og:url" content="http://smallmiro.github.com" /-->
+		<meta property="og:url" content="http://smallmiro.github.com" />
 		<meta property="og:site_name" content="전세계 레고 공식 홈페이지 가격 비교" />
 		<meta property="og:image" content="http://smallmiro.github.io/image/lego.png" />
 		<meta property="og:description" content="전세계 레고 공식 홈페이지의 가격비교, 많이 찾는 상품, 품절 등의 상태를 비교해보세요." />
@@ -130,7 +130,7 @@
 							      <div class="caption">
 							        <h3>{{product.name}}</h3>
 											<p>
-<div facebook class="facebookShare" data-title='{{product.name}}' data-picture-url='{{product.image}}' data-url='http://smallmiro.github.io/?prodcode={{product.prodCode}}' data-shares='shares'>{{ shares }}</div>
+<div facebook class="facebookShare" data-title='{{product.name}}' data-picture-url='{{product.image}}' data-url='http://smallmiro.github.io/?prodcode={{product.prodCode}}' data-shares='feed'>{{ shares }}</div>
 											</p>
 							        <p>상품 이미지의 저작권은 shop.lego.com이 가지고 있습니다.</p>
 							      </div>
