--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
 		<script src="js/controller/home.js?20150723007"></script>
-		<script src="js/angular-socialshare.min.js?20150723008"></script>
+		<script src="js/angular-socialshare.min.js?20150723009"></script>
 		<link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/angular-socialshare.min.css?20150723007" rel="stylesheet">
 		<title>레고 공홈 가격비교</title>
@@ -130,7 +130,7 @@
 							      <div class="caption">
 							        <h3>{{product.name}}</h3>
 											<p>
-<div facebook class="facebookShare" data-title='{{product.name}}' data-picture-url='{{product.image}}' data-url='http://smallmiro.github.io/?prodcode={{product.prodCode}}' data-shares='feed'>{{ shares }}</div>
+<div facebook class="facebookShare" data-title='{{product.name}}' data-picture-url='{{product.image}}' data-url='http://smallmiro.github.io/?prodcode={{product.prodCode}}' data-shares='shares'>{{ shares }}</div>
 											</p>
 							        <p>상품 이미지의 저작권은 shop.lego.com이 가지고 있습니다.</p>
 							      </div>
