--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset='utf-8'>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+		<meta name="fragment" content="!"></meta>
 		<meta http-equiv="X-UA-Compatible" content="chrome=1">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta property="fb:app_id" content="401739753336740" />
@@ -20,7 +21,7 @@
 
 
 		<script src="js/controller/home.js?20150723007"></script>
-		<script src="js/angular-socialshare.min.js?20150723009"></script>
+		<script src="js/angular-socialshare.min.js?20150723010"></script>
 		<link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/angular-socialshare.min.css?20150723007" rel="stylesheet">
 		<title>레고 공홈 가격비교</title>
