--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 								     </div>
 								     <div class="col-sm-4">
 								       <!--Body content-->
-											 <div class="fb-share-button" data-href="http://smallmiro.github.io/?prodcode={{product.prodCode}}" data-layout="box_count"></div>
+											 <!--div class="fb-share-button" data-href="http://smallmiro.github.io/?prodcode={{product.prodCode}}" data-layout="box_count"></div-->
 								     </div>
 								   </div>
 
@@ -204,7 +204,10 @@
 					      <div class="caption">
 
 					        <h4>{{product.name}}</h4>
-					        <p>카테고리 : {{product.category}}</p>
+									<blockquote>
+									 <p>카테고리 : {{product.category}}</p>
+ 									 <p>Item : {{product.prodCode}}</p>
+								 </blockquote>
 					        <p><a href="#" style="width:100%" class="btn btn-default" role="button" ng-click="viewDetail(product.prodCode)">가격정보</a></p>
 					      </div>
 					    </div>
