--- a/index.html
+++ b/index.html
@@ -223,10 +223,10 @@
 
 			</div>
 
-			<div class="container">
+			<div class="container"  style="padding-top: 50px;padding-bottom: 20px;">
 
 					<div class="row">
-					  <div class="col-sm-8 col-md-8">
+					  <div class="col-sm-6 col-md-8">
 							<p>전세계 레고 공식 홈페이지의 가격비교, 많이 찾는 상품, 품절 등의 상태를 비교해보세요.</p>
 							<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 								<input type="hidden" name="cmd" value="_s-xclick">
@@ -236,7 +236,7 @@
 								<img alt="" border="0" src="https://www.paypalobjects.com/ko_KR/i/scr/pixel.gif" width="1" height="1">
 								</form>
 						</div>
-						<div class="facebook-column col-md-5 col-sm-5">
+						<div class="col-sm-6 col-md-4">
 								<div class="fb-page" data-href="https://www.facebook.com/legogonghome"  data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-show-posts="false">
 									<div class="fb-xfbml-parse-ignore">
 										<blockquote cite="https://www.facebook.com/legogonghome">
@@ -245,8 +245,6 @@
 									</div>
 								</div>
             </div>
-
-
 			</div>
 			<!-- FOOTER  -->
 			<footer>
