--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 								<img alt="" border="0" src="https://www.paypalobjects.com/ko_KR/i/scr/pixel.gif" width="1" height="1">
 								</form>
 						</div>
-						<div class="col-sm-6 col-md-4">
+						<div class="col-sm-6 col-md-4 text-center">
 								<div class="fb-page" data-href="https://www.facebook.com/legogonghome"  data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-show-posts="false">
 									<div class="fb-xfbml-parse-ignore">
 										<blockquote cite="https://www.facebook.com/legogonghome">
