메일 주소 추가..

--- a/index.html
+++ b/index.html
@@ -251,9 +251,8 @@
 			</div>
 			<!-- FOOTER  -->
 			<footer>
-
-		      <div class="well">
-
+		      <div class="well text-center">
+						<a href="mailto:smallmiro@gmail.com" target="_self" class="label label-default"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> smallmiro</a>
 		      </div>
 			</footer>
 	</body>
