메일 주소 추가..

--- a/intro.html
+++ b/intro.html
@@ -185,7 +185,7 @@
 		<!-- FOOTER  -->
 		<footer>
 				<div class="well text-center">
-					<span class="label label-default"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> smallmiro</span>
+					<a href="mailto:smallmiro@gmail.com" target="_self" class="label label-default"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> smallmiro</a>
 				</div>
 		</footer>
 	</body>
