기부 버튼 변

--- a/index.html
+++ b/index.html
@@ -122,6 +122,17 @@
 			</div>
 		</div>
 		<div class="container">
+			<div id="main_content_wrap" class="outer">
+				<section id="search_content" class="inner">
+					<div class="row" ng-repeat="product in products">
+
+					  <div class="col-sm-12">
+							<script type="text/javascript" src="http://smart.linkprice.com/minishop.php?minishop_id=4&affiliate_id=A100528328&width=468&height=60&target=_blank&show_type="> </script>
+						</div>
+					</div>
+				<section>
+				</div>
+			</div>
 			<!-- MAIN CONTENT -->
 			<div id="main_content_wrap" class="outer">
 				<section id="search_content" class="inner">
