--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
 			</div>
 		</div>
 		<div class="container">
-			<div id="add_content_wrap" class="outer">
+			<div id="add_content_wrap" class="outer" style="padding-bottom: 20px;">
 				<section id="add_content" class="inner">
 					<div class="row">
-					  <div class="col-sm-12">
+					  <div class="col-sm-12 text-center">
 							<script type="text/javascript" src="http://smart.linkprice.com/minishop.php?minishop_id=4&affiliate_id=A100528328&width=468&height=60&target=_blank&show_type="> </script>
 						</div>
 					</div>
