기부 버튼 변

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 				<section id="add_content" class="inner">
 					<div class="row">
 					  <div class="col-sm-12 text-center">
-							<script type="text/javascript" src="http://smart.linkprice.com/minishop.php?minishop_id=4&affiliate_id=A100528328&width=468&height=60&target=_blank&show_type="> </script>
+							<iframe src="http://ad.linkprice.com/stlink.php?m=espiporter&a=A100528328&width=468&height=60&target=_blank" width="468" height="60" frameborder="0" scrolling="no" marginwidth="0" marginheight="0"></iframe>
 						</div>
 					</div>
 				<section>
