--- a/index.html
+++ b/index.html
@@ -125,12 +125,10 @@
 			<div id="add_content_wrap" class="outer" style="padding-bottom: 20px;">
 				<section id="add_content" class="inner">
 					<div class="row">
-					  <div class="col-sm-12 visible-sm-* visible-mg-* visible-lg-* text-center">
+					  <div class="col-sm-12 text-center">
 							<script language="javascript" src="http://minishop.linkprice.com/autolink.php?a_id=A100528328&auto_id=5644&width=468&height=60&target=_blank"></script>
 						</div>
-						<div class="col-sm-12 visible-xs-* text-center">
-							<script language="javascript" src="http://minishop.linkprice.com/autolink.php?a_id=A100528328&auto_id=5644&width=120&height=60&target=_blank"></script>
-						</div>
+
 					</div>
 				<section>
 			</div>
