[오준환][NOBTS] 로그변

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<meta property="fb:app_id" content="401739753336740" />
 		<meta property="og:type" content="website" />
 		<meta property="og:title" content="레고 공홈 가격비교" />
-		<meta property="og:url" content="http://smallmiro.github.com" />
+		<meta property="og:url" content="http://www.getlego.me" />
 		<meta property="og:site_name" content="전세계 레고 공식 홈페이지 가격 비교" />
 		<meta property="og:image" content="http://smallmiro.github.io/image/lego.png" />
 		<meta property="og:description" content="전세계 레고 공식 홈페이지의 가격비교, 많이 찾는 상품, 품절 등의 상태를 비교해보세요." />
