--- a/intro.html
+++ b/intro.html
@@ -8,9 +8,9 @@
 		<meta property="fb:app_id" content="401739753336740" />
 		<meta property="og:type" content="website" />
 		<meta property="og:title" content="레고 공홈 가격비교" />
-		<meta property="og:url" content="http://smallmiro.github.com" />
+		<meta property="og:url" content="http://www.getlego.me" />
 		<meta property="og:site_name" content="전세계 레고 공식 홈페이지 가격 비교" />
-		<meta property="og:image" content="http://smallmiro.github.io/image/lego.png" />
+		<meta property="og:image" content="http://www.getlego.me/image/lego.png" />
 		<meta property="og:description" content="전세계 레고 공식 홈페이지의 가격비교, 많이 찾는 상품, 품절 등의 상태를 비교해보세요." />
 		<meta name="description" content="전세계 레고 공식 홈페이지의 가격비교, 많이 찾는 상품, 품절 등의 상태를 비교해보세요." />
 		<meta name="keywords" content="레고,가격비교,레고공홈,레고제택크,가격비교,레고품절,LEGO,LEGO SHOP">
@@ -96,6 +96,19 @@
             <h1 id="timeline">Release note</h1>
         </div>
         <ul class="timeline">
+					<li>
+						<div class="timeline-badge info"><i class="glyphicon glyphicon-credit-card"></i></div>
+						<div class="timeline-panel">
+							<div class="timeline-heading">
+								<h4 class="timeline-title">도메인 등록!</h4>
+								<p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 2015년 7월 24일</small></p>
+							</div>
+							<div class="timeline-body">
+								<p>드디어 도메인 등록 완료 되었습니</p>
+								<p><h3>http://www.getlego.me</h3> 입니다!!! </p>
+							</div>
+						</div>
+					</li>
 					<li>
 						<div class="timeline-badge info"><i class="glyphicon glyphicon-credit-card"></i></div>
 						<div class="timeline-panel">
