도메인 등록....

--- a/intro.html
+++ b/intro.html
@@ -104,8 +104,8 @@
 								<p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 2015년 7월 24일</small></p>
 							</div>
 							<div class="timeline-body">
-								<p>드디어 도메인 등록 완료 되었습니</p>
-								<p><h3>http://www.getlego.me</h3> 입니다!!! </p>
+								<p>드디어 도메인 등록 완료 되었습니다</p>
+								<p><h3>http://www.getlego.me</h3></p>
 							</div>
 						</div>
 					</li>
