도메인 변경..

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 							      <div class="caption">
 							        <h3>{{product.name}}</h3>
 											<p>
-<div facebook class="facebookShare" data-title='{{product.name}}' data-picture-url='{{product.image}}' data-url='http://smallmiro.github.io/?prodcode={{product.prodCode}}' data-shares='shares'>{{ shares }}</div>
+<div facebook class="facebookShare" data-title='{{product.name}}' data-picture-url='{{product.image}}' data-url='http://www.getlego.me/?prodcode={{product.prodCode}}' data-shares='shares'>{{ shares }}</div>
 											</p>
 							        <p>상품 이미지의 저작권은 shop.lego.com이 가지고 있습니다.</p>
 							      </div>
