템핑광고 추가..

--- a/index.html
+++ b/index.html
@@ -126,7 +126,10 @@
 				<section id="add_content" class="inner">
 					<div class="row">
 					  <div class="col-sm-12 text-center">
+							<!--
 							<script language="javascript" src="http://minishop.linkprice.com/autolink.php?a_id=A100528328&auto_id=5644&width=468&height=60&target=_blank"></script>
+						-->
+						<tenping class="adsbytenping" class="col-sm-12" tenping-ad-client="SfWOxCSwnxbm%2fcRAOTMdh06SBM8qLl7%2bfp0LGZpoFMILluNi7ZnXo%2f8g2kH8Fdwa" tenping-ad-type="CZAh6Dz83kfxX1Iv1NS%2f7w%3d%3d"></tenping><script async src='http://tenping.kr/scripts/adsbytenping.min.js' ></script>						
 						</div>
 
 					</div>
