--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 							      <div class="caption">
 							        <h3>{{product.name}}</h3>
 											<p>
-<div facebook class="facebookShare" data-title='{{product.name}}' data-picture-url='{{product.image}}' data-url='http://www.getlego.me/?prodcode={{product.prodCode}}' data-shares='shares'>{{ shares }}</div>
+<div facebook class="facebookShare" data-title='{{product.name}}' data-picture-url='{{product.image}}' data-url='http://item.getlego.me/detail/{{product.prodCode}}' data-shares='shares'>{{ shares }}</div>
 											</p>
 							        <p>상품 이미지의 저작권은 shop.lego.com이 가지고 있습니다.</p>
 							      </div>
@@ -226,7 +226,7 @@
 									<blockquote>
  									 <p>Item : {{product.prodCode}}</p>
 									 <p>
-										 <div facebook class="facebookShare" data-title='{{product.name}}' data-picture-url='{{product.image}}' data-url='http://www.getlego.me/?prodcode={{product.prodCode}}' data-shares='shares'>{{ shares }}</div>
+										 <div facebook class="facebookShare" data-title='{{product.name}}' data-picture-url='{{product.image}}' data-url='http://item.getlego.me/detail/{{product.prodCode}}' data-shares='shares'>{{ shares }}</div>
 									 </p>
 								 </blockquote>
 					        <p><a href="#" style="width:100%" class="btn btn-default" role="button" ng-click="viewDetail(product.prodCode)" ng-disabled="isLoading">가격정보</a></p>
