모델 객체 수정..

--- a/review/index.html
+++ b/review/index.html
@@ -41,7 +41,7 @@
     <![endif]-->
 
 	</head>
-	<body ng-controller="legoController" data-ng-init="getHardList()"  style="padding-top: 50px;padding-bottom: 20px;">
+	<body ng-controller="legoController" data-ng-init="viewDetail(10248)"  style="padding-top: 50px;padding-bottom: 20px;">
 	<script>
 	  window.fbAsyncInit = function() {
 	    FB.init({
@@ -149,6 +149,7 @@
 							      <div class="caption">
 							        <h3>{{product.name}}</h3>
 											<p>
+
 											</p>
 							        <p>상품 이미지의 저작권은 shop.lego.com이 가지고 있습니다.</p>
 							      </div>
