동영상 추가.

--- a/review/index.html
+++ b/review/index.html
@@ -139,6 +139,14 @@
 				<section id="search_content" class="inner">
 					<div class="row" ng-repeat="product in products">
 
+					  <div class="col-sm-12 col-md-12">
+							<iframe width="100%" src="https://www.youtube.com/embed/Pl-TKIp-A8k" frameborder="0" allowfullscreen></iframe>	
+						</div>
+					</div>
+				</section>
+				<section id="search_content" class="inner">
+					<div class="row" ng-repeat="product in products">
+
 					  <div class="col-sm-6 col-md-4">
 								<div class="panel panel-default">
 								<div class="panel-heading"><img ng-src="{{product.categoryImage}}"></div>
