동영상 추가.

--- a/review/index.html
+++ b/review/index.html
@@ -137,10 +137,10 @@
 			<!-- MAIN CONTENT -->
 			<div id="main_content_wrap" class="outer">
 				<section id="search_content" class="inner">
-					<div class="row" ng-repeat="product in products">
+					<div class="row-fluid" style="min-height:400px;max-height:500px;">
 
 					  <div class="col-sm-12 col-md-12">
-							<iframe width="100%" height="100%" src="https://www.youtube.com/embed/Pl-TKIp-A8k" frameborder="0" allowfullscreen></iframe>	
+							<iframe width="100%" height="100%" src="https://www.youtube.com/embed/Pl-TKIp-A8k" frameborder="0" allowfullscreen></iframe>
 						</div>
 					</div>
 				</section>
