--- a/review/index.html
+++ b/review/index.html
@@ -140,7 +140,7 @@
 					<div class="row-fluid" style="min-height:400px;max-height:500px;">
 
 					  <div class="col-sm-12 col-md-12">
-							<iframe width="100%" height="100%" src="https://www.youtube.com/embed/Pl-TKIp-A8k" frameborder="0" allowfullscreen></iframe>
+							<iframe width="100%" style="min-height:400px;max-height:500px;" src="https://www.youtube.com/embed/Pl-TKIp-A8k" frameborder="0" allowfullscreen></iframe>
 						</div>
 					</div>
 				</section>
