동영상 추가.동영상 추가.

--- a/review/index.html
+++ b/review/index.html
@@ -120,6 +120,7 @@
 				</p>
 			</div>
 		</div>
+
 		<div class="container">
 			<div id="add_content_wrap" class="outer" style="padding-bottom: 20px;">
 				<section id="add_content" class="inner">
@@ -135,15 +136,11 @@
 				<section>
 			</div>
 			<!-- MAIN CONTENT -->
+			<div class="well text-center">
+				<iframe width="100%" style="min-height:400px;max-height:800px;" src="https://www.youtube.com/embed/Pl-TKIp-A8k" frameborder="0" allowfullscreen></iframe>
+			</div>
 			<div id="main_content_wrap" class="outer">
-				<section id="search_content" class="inner">
-					<div class="row-fluid" style="min-height:400px;max-height:500px;">
-
-					  <div class="col-sm-6 col-md-12">
-							<iframe width="100%" style="min-height:400px;max-height:800px;" src="https://www.youtube.com/embed/Pl-TKIp-A8k" frameborder="0" allowfullscreen></iframe>
-						</div>
-					</div>
-				</section>
+			
 				<section id="search_content" class="inner">
 					<div class="row" ng-repeat="product in products">
 
