--- a/review/index.html
+++ b/review/index.html
@@ -137,10 +137,10 @@
 			</div>
 			<!-- MAIN CONTENT -->
 			<div class="well text-center">
-				<iframe width="100%" style="min-height:400px;max-height:800px;" src="https://www.youtube.com/embed/Pl-TKIp-A8k" frameborder="0" allowfullscreen></iframe>
+				<iframe class="col-sm-6 col-md-4" style="min-height:400px;max-height:800px;" src="https://www.youtube.com/embed/Pl-TKIp-A8k" frameborder="0" allowfullscreen></iframe>
 			</div>
 			<div id="main_content_wrap" class="outer">
-			
+
 				<section id="search_content" class="inner">
 					<div class="row" ng-repeat="product in products">
 
