--- a/review/index.html
+++ b/review/index.html
@@ -137,7 +137,9 @@
 			</div>
 			<!-- MAIN CONTENT -->
 			<div class="well text-center">
-				<iframe class="col-sm-6 col-md-4" style="min-height:400px;max-height:800px;" src="https://www.youtube.com/embed/Pl-TKIp-A8k" frameborder="0" allowfullscreen></iframe>
+					<div class="row">
+							<iframe class="col-sm-6 col-md-4" style="min-height:400px;max-height:800px;" src="https://www.youtube.com/embed/Pl-TKIp-A8k" frameborder="0" allowfullscreen></iframe>
+				</div>
 			</div>
 			<div id="main_content_wrap" class="outer">
 
