동영상 추가.동영상 추가.

--- a/review/index.html
+++ b/review/index.html
@@ -133,14 +133,22 @@
 						</div>
 
 					</div>
-				<section>
+				</section>
+			</div>
+			<div id="add_content_wrap" class="outer" style="padding-bottom: 20px;">
+				<section id="add_content2" class="inner">
+					<div class="row">
+					  <div class="col-sm-12 text-center">
+							<!--
+							<script language="javascript" src="http://minishop.linkprice.com/autolink.php?a_id=A100528328&auto_id=5644&width=468&height=60&target=_blank"></script>
+						-->
+						<iframe style="min-height:400px;max-height:800px;" src="https://www.youtube.com/embed/Pl-TKIp-A8k" frameborder="0" allowfullscreen></iframe>
+						</div>
+
+					</div>
+				</section>
 			</div>
 			<!-- MAIN CONTENT -->
-			<div class="well text-center">
-					<div class="row">
-							<iframe class="col-sm-12 col-md-8" style="min-height:400px;max-height:800px;" src="https://www.youtube.com/embed/Pl-TKIp-A8k" frameborder="0" allowfullscreen></iframe>
-				</div>
-			</div>
 			<div id="main_content_wrap" class="outer">
 
 				<section id="search_content" class="inner">
