동영상 추가.동영상 추가.

--- a/review/index.html
+++ b/review/index.html
@@ -139,10 +139,10 @@
 				<section id="add_content2" class="inner">
 					<div class="row">
 					  <div class="col-sm-12 text-center">
-							<!--
-							<script language="javascript" src="http://minishop.linkprice.com/autolink.php?a_id=A100528328&auto_id=5644&width=468&height=60&target=_blank"></script>
-						-->
-						<iframe style="min-height:400px;max-height:800px;max-width:800px;" src="https://www.youtube.com/embed/Pl-TKIp-A8k" frameborder="0" allowfullscreen></iframe>
+							<div class="embed-responsive embed-responsive-16by9">
+							  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Pl-TKIp-A8k"></iframe>
+							</div>
+						
 						</div>
 
 					</div>
