동영상 추가.동영상 추가.

--- a/review/index.html
+++ b/review/index.html
@@ -137,15 +137,11 @@
 			</div>
 			<div id="add_content_wrap" class="outer" style="padding-bottom: 20px;">
 				<section id="add_content2" class="inner">
-					<div class="row">
-					  <div class="col-sm-12 text-center">
-							<div class="embed-responsive embed-responsive-16by9">
-							  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Pl-TKIp-A8k"></iframe>
-							</div>
-						
-						</div>
 
-					</div>
+							<div class="embed-responsive embed-responsive-16by9">
+							  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Pl-TKIp-A8k" allowfullscreen></iframe>
+							</div>
+
 				</section>
 			</div>
 			<!-- MAIN CONTENT -->
