동영상 추가.동영상 추가.동영상 추가.동영상 추가.

--- a/review/index.html
+++ b/review/index.html
@@ -21,7 +21,7 @@
 
 
 		<script src="/js/controller/review.js?20150728008"></script>
-		<link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
+		<link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
 
 		<title>레고 공홈 가격비교</title>
 		<script>
