--- a/review/index.html
+++ b/review/index.html
@@ -138,12 +138,13 @@
 			<div id="add_content_wrap" class="outer" style="padding-bottom: 20px;">
 				<section id="add_content2" class="inner">
 
+						<div class="row">
 					<div class="col-sm-12">
 							<div class="embed-responsive embed-responsive-16by9">
 							  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Pl-TKIp-A8k" allowfullscreen></iframe>
 							</div>
 						</div>
-
+</div>
 				</section>
 			</div>
 			<!-- MAIN CONTENT -->
