--- a/review/index.html
+++ b/review/index.html
@@ -114,7 +114,7 @@
 						<div class="row">
 					<div class="col-sm-12">
 							<div class="embed-responsive embed-responsive-16by9">
-							  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Pl-TKIp-A8k" allowfullscreen></iframe>
+							  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Pl-TKIp-A8k?rel=0" allowfullscreen></iframe>
 							</div>
 						</div>
 </div>
