--- a/review/10246.html
+++ b/review/10246.html
@@ -116,8 +116,11 @@
 
 						<div class="row">
 					<div class="col-sm-12">
-							<div class="embed-responsive embed-responsive-16by9">
-							  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/UoQMpqjdPTQ?rel=0" allowfullscreen></iframe>
+
+							<div class="panel panel-default">
+								<div class="embed-responsive embed-responsive-16by9">
+								  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/UoQMpqjdPTQ?rel=0" allowfullscreen></iframe>
+								</div>
 							</div>
 						</div>
 </div>
