--- a/review/10248.html
+++ b/review/10248.html
@@ -83,11 +83,11 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="/">Lego 가격비교</a>
+					<a class="navbar-brand" href="/" target="_self">Lego 가격비교</a>
 				</div>
 				<div id="navbar" class="navbar-collapse collapse" collapse="navbarCollapsed">
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="/">Home</a></li>
+            <li class="active"><a href="/" target="_self">Home</a></li>
             <li><a href="intro.html" target="_self">About</a></li>
           </ul>
         </div><!--/.nav-collapse -->
