--- a/review/10248.html
+++ b/review/10248.html
@@ -8,10 +8,10 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta property="fb:app_id" content="401739753336740" />
 		<meta property="og:type" content="website" />
-		<meta property="og:title" content="레고 공홈 가격비교" />
+		<meta property="og:title" content="Ferrari F40 :: 레고 공홈 가격비교" />
 		<meta property="og:url" content="http://www.getlego.me" />
 		<meta property="og:site_name" content="전세계 레고 공식 홈페이지 가격 비교" />
-		<meta property="og:image" content="http://smallmiro.github.io/image/lego.png" />
+		<meta property="og:image" content="http://cache.lego.com/e/dynamic/is/image/LEGO/10248" />
 		<meta property="og:description" content="전세계 레고 공식 홈페이지의 가격비교, 많이 찾는 상품, 품절 등의 상태를 비교해보세요." />
 		<meta name="description" content="전세계 레고 공식 홈페이지의 가격비교, 많이 찾는 상품, 품절 등의 상태를 비교해보세요." />
 		<meta name="keywords" content="레고,가격비교,레고공홈,레고제택크,가격비교,레고품절,LEGO,LEGO SHOP">
