--- a/review/10248.html
+++ b/review/10248.html
@@ -9,7 +9,7 @@
 		<meta property="fb:app_id" content="401739753336740" />
 		<meta property="og:type" content="website" />
 		<meta property="og:title" content="Ferrari F40 :: 레고 공홈 가격비교" />
-		<meta property="og:url" content="http://www.getlego.me" />
+		<meta property="og:url" content="http://www.getlego.me/review/10248.html" />
 		<meta property="og:site_name" content="전세계 레고 공식 홈페이지 가격 비교" />
 		<meta property="og:image" content="http://cache.lego.com/e/dynamic/is/image/LEGO/10248" />
 		<meta property="og:description" content="전세계 레고 공식 홈페이지의 가격비교, 많이 찾는 상품, 품절 등의 상태를 비교해보세요." />
