--- a/review/10248-chart.html
+++ b/review/10248-chart.html
@@ -116,13 +116,13 @@
 			<div id="add_content_wrap" class="outer" style="padding-bottom: 20px;">
 				<section id="add_content2" class="inner">
 
-					<div class="row">
-						<div class="col-sm-12">
+						<div class="row">
+					<div class="col-sm-12">
 							<div class="embed-responsive embed-responsive-16by9">
 							  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Pl-TKIp-A8k?rel=0" allowfullscreen></iframe>
 							</div>
 						</div>
-					</div>
+</div>
 				</section>
 			</div>
 			<!-- MAIN CONTENT -->
@@ -205,13 +205,13 @@
 				 </div>
 					</div>
 				</section>
-				<section id="add_content_chart" class="inner">
-
+				<section id="hard_List" class="inner">
 					<div class="row">
-						<div class="col-sm-12">
-							<canvas id="line" class="chart chart-line" data="data" labels="labels" legend="true" series="series" click="onClick"/>
-						</div>
+					  <div class="col-sm-12 col-md-12">
+
+					  </div>
 					</div>
+
 				</section>
 			</div>
 
