--- a/review/10248-chart.html
+++ b/review/10248-chart.html
@@ -21,9 +21,10 @@
 
 
 		<script src="/js/controller/review.js?20150728008"></script>
-		<script src="/js/ng-google-chart.js"></script>
+		<script src="/js/angular-chart.min.js"></script>
+		<script src="/js/Chart.js"></script>
 		<link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
-		<link href="/css/angular-ui.css" rel="stylesheet">
+		<link href="/css/angular-chart.css" rel="stylesheet">
 
 		<title>레고 공홈 가격비교</title>
 		<script>
