--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 											</span>
 										</td>
 										<td class="text-left">{{price.badges}}</td>
-								 		<td class="text-right">{{price.krw | number:0}} krw</td>
+								 		<td class="text-right" data-toggle="tooltip" data-placement="bottom" title="{{price.availabilityMessage}}">{{price.krw | number:0}} krw</td>
 								 		<td class="text-right">{{price.buyLimit | number:0}} 개</td>
 										<td class="text-left">{{price.availabilityMessage}}</td>
 										<td class="text-center"><a href="{{product | shopUrl:price.country}}" target="{{price.country}}"><button type="button" class="btn btn-info btn-xs">Go!</button></a></tb>
