--- a/index.html
+++ b/index.html
@@ -206,11 +206,9 @@
 										<td class="text-center"><a href="{{product | shopUrl:price.country}}" target="{{price.country}}"><button type="button" class="btn btn-info btn-xs">Go!</button></a></tb>
 								 	</tr>
 								 	<tr class="info">
-								 		<td class="text-center">평균</td>
-										<td></td>
-								 		<td colspan="2" class="text-right">{{product.avg| number:0}} krw</td>
-										<td></td>
-										<td></td>
+								 		<td  colspan="2" class="text-center">평균</td>
+								 		<td class="text-right">{{product.avg| number:0}} krw</td>
+										<td colspan="2" ></td>
 								 	</tr>
 						   </table>
 						 	</div>
