--- a/index.html
+++ b/index.html
@@ -235,7 +235,9 @@
 								 </blockquote>
 								 <p ng-if="null != product.asin">
 									 <button style="width:49%" class="btn btn-default" role="button" ng-click="viewDetail(product.prodCode)" ng-disabled="isLoading">가격 정보</button>
-									 <a type="amzn" asin="{{product.asin}}" style="width:49%" class="btn btn-info" role="button">아마존 구매</a>
+									 <a type="amzn" asin="{{product.asin}}">
+										 <button style="width:49%" class="btn btn-default" role="button">아마존 구매</button>
+									 </a>
 
 								 </p>
 								 <p ng-if="null == product.asin">
