아마존 정보..

--- a/index.html
+++ b/index.html
@@ -155,7 +155,9 @@
 											</p>
 							        <p>상품 이미지의 저작권은 shop.lego.com이 가지고 있습니다.</p>
 											<p ng-if="null != product.asin">
-		 									 <a type="amzn" asin="{{product.asin}}" style="width:100%" class="btn btn-info" role="button">아마존 구매</a>
+												<a type="amzn" asin="{{product.asin}}">
+		 										 <button style="width:49%" class="btn btn-info" role="button">아마존 구매</button>
+		 									 </a>
 		 								 </p>
 							      </div>
 									</div>
@@ -236,7 +238,7 @@
 								 <p ng-if="null != product.asin">
 									 <button style="width:49%" class="btn btn-default" role="button" ng-click="viewDetail(product.prodCode)" ng-disabled="isLoading">가격 정보</button>
 									 <a type="amzn" asin="{{product.asin}}">
-										 <button style="width:49%" class="btn btn-default" role="button">아마존 구매</button>
+										 <button style="width:49%" class="btn btn-info" role="button">아마존 구매</button>
 									 </a>
 
 								 </p>
